# bc-verity

./: .gitignore  Dockerfile.dev  README.md  app.py  db.sqlite  docker-compose.yaml  pyproject.toml
app/: __init__.py  db.py  schema.sql
app/task/: repository.py  views.py
