[tool.poetry]
name = "bc-verity"
version = "0.1.0"
description = ""
authors = ["Luis <luiscvlh11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"


[tool.poetry.group.dev.dependencies]
flask-cors = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
